[gd_scene load_steps=20 format=3 uid="uid://bvh4xp75486ok"]

[ext_resource type="PackedScene" uid="uid://wmayu3oi50hr" path="res://player.tscn" id="1_acvw3"]
[ext_resource type="Script" path="res://clone_manager.gd" id="1_va2a3"]
[ext_resource type="Script" path="res://Target.gd" id="2_6wh6x"]
[ext_resource type="PackedScene" uid="uid://c4xltq2ymw8oa" path="res://clone_player.tscn" id="2_extyo"]
[ext_resource type="PackedScene" path="res://target_body.tscn" id="3_g7fkj"]
[ext_resource type="Script" path="res://round_manager.gd" id="4_ys46s"]
[ext_resource type="FontFile" uid="uid://d0fgeumvb7om5" path="res://fonts/Quantico/Quantico-BoldItalic.ttf" id="6_7ncts"]
[ext_resource type="Script" path="res://round_timer_progress_bar.gd" id="6_jmt14"]
[ext_resource type="FontFile" uid="uid://nya7rxmdi73m" path="res://fonts/Quantico/Quantico-Italic.ttf" id="7_jbaeb"]
[ext_resource type="Script" path="res://objective_label.gd" id="7_qqgus"]
[ext_resource type="PackedScene" uid="uid://cfkbfxmcj2tib" path="res://large_map.tscn" id="9_rea1c"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_suie4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cajac"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_la0ih"]

[sub_resource type="PrismMesh" id="PrismMesh_l72xt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27al1"]
bg_color = Color(1, 0, 0, 0.0784314)

[sub_resource type="Theme" id="Theme_dpb75"]
default_font = ExtResource("7_jbaeb")
default_font_size = 500

[sub_resource type="Theme" id="Theme_80t45"]
default_font = ExtResource("6_7ncts")
default_font_size = 200

[sub_resource type="BoxShape3D" id="BoxShape3D_us7u6"]
size = Vector3(1000, 3, 1000)

[node name="Node3D" type="Node3D"]

[node name="Player" parent="." instance=ExtResource("1_acvw3")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
visible = false
light_angular_distance = 27.11

[node name="Target" type="StaticBody3D" parent="." node_paths=PackedStringArray("round_manager")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 4.2, -5)
script = ExtResource("2_6wh6x")
round_manager = NodePath("../Managers/RoundManager")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Target"]
visible = false
mesh = SubResource("CapsuleMesh_suie4")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_cajac")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Target"]
shape = SubResource("CapsuleShape3D_la0ih")

[node name="target_body" parent="Target" instance=ExtResource("3_g7fkj")]
transform = Transform3D(0.24, 0, 0, 0, 0.24, 0, 0, 0, 0.24, 0, -0.558746, 0)

[node name="Managers" type="Node3D" parent="."]

[node name="CloneManager" type="Node3D" parent="Managers" node_paths=PackedStringArray("player")]
script = ExtResource("1_va2a3")
clone_scene = ExtResource("2_extyo")
player = NodePath("../../Player")

[node name="RoundManager" type="Node3D" parent="Managers" node_paths=PackedStringArray("spawn_points", "clone_manager", "player", "objective_label")]
script = ExtResource("4_ys46s")
spawn_points = [NodePath("../../Spawnpoints/Spawn_2"), NodePath("../../Spawnpoints/Spawn_1"), NodePath("../../Spawnpoints/Spawn_3"), NodePath("../../Spawnpoints/Spawn_4"), NodePath("../../Spawnpoints/Spawn_5"), NodePath("../../Spawnpoints/Spawn_6")]
clone_manager = NodePath("../CloneManager")
player = NodePath("../../Player")
objective_label = NodePath("../../UserInterface/CenterContainer/ObjectiveLabel")

[node name="RoundStartTimer" type="Timer" parent="Managers/RoundManager"]
one_shot = true

[node name="RoundTimer" type="Timer" parent="Managers/RoundManager"]
one_shot = true

[node name="Spawnpoints" type="Node3D" parent="."]

[node name="Spawn_1" type="Node3D" parent="Spawnpoints"]
transform = Transform3D(-0.214684, 0, -0.976684, 0, 1, 0, 0.976684, 0, -0.214684, -1.38797, 1, -45.2495)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Spawnpoints/Spawn_1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 0.2, 0, -1, -8.74228e-09, 0, 0, 0)
mesh = SubResource("PrismMesh_l72xt")

[node name="Spawn_2" type="Node3D" parent="Spawnpoints"]
transform = Transform3D(-0.684318, 0, -0.729183, 0, 1, 0, 0.729183, 0, -0.684318, -13.1269, 1, -35.4955)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Spawnpoints/Spawn_2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 0.2, 0, -1, -8.74228e-09, 0, 0, 0)
mesh = SubResource("PrismMesh_l72xt")

[node name="Spawn_3" type="Node3D" parent="Spawnpoints"]
transform = Transform3D(-0.997895, 0, -0.0648459, 0, 1, 0, 0.0648459, 0, -0.997895, -14.9092, 23.75, 0.981683)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Spawnpoints/Spawn_3"]
transform = Transform3D(-4.37114e-08, 1, 8.74228e-09, 0, -4.37114e-08, 0.2, 1, 4.37114e-08, 3.82137e-16, 0, 0, 0)
mesh = SubResource("PrismMesh_l72xt")

[node name="Spawn_4" type="Node3D" parent="Spawnpoints"]
transform = Transform3D(-0.207296, 0, 0.978278, 0, 1, 0, -0.978278, 0, -0.207296, 17.9786, 1, -7.15968)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Spawnpoints/Spawn_4"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 0.2, 0, -1, -8.74228e-09, 0, 0, 0)
mesh = SubResource("PrismMesh_l72xt")

[node name="Spawn_5" type="Node3D" parent="Spawnpoints"]
transform = Transform3D(-0.54052, 0, -0.841331, 0, 1, 0, 0.841331, 0, -0.54052, -5.61495, -4.87067, -19.2731)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Spawnpoints/Spawn_5"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 0.2, 0, -1, -8.74228e-09, 0, 0, 0)
mesh = SubResource("PrismMesh_l72xt")

[node name="Spawn_6" type="Node3D" parent="Spawnpoints"]
transform = Transform3D(-0.0415605, 0, 0.999136, 0, 1, 0, -0.999136, 0, -0.0415605, -4.23287, 0.836193, 4.7872)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Spawnpoints/Spawn_6"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 0.2, 0, -1, -8.74228e-09, 0, 0, 0)
mesh = SubResource("PrismMesh_l72xt")
skeleton = NodePath("../../Spawn_6")

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RoundTimerProgressBar" type="ProgressBar" parent="UserInterface" node_paths=PackedStringArray("round_timer")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_27al1")
show_percentage = false
script = ExtResource("6_jmt14")
round_timer = NodePath("../../Managers/RoundManager/RoundTimer")

[node name="TimeLeftLabel" type="Label" parent="UserInterface/RoundTimerProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_dpb75")
theme_override_colors/font_color = Color(1, 1, 1, 0.392157)
text = "Timer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ObjectiveLabel" type="Label" parent="UserInterface/CenterContainer"]
layout_mode = 2
theme = SubResource("Theme_80t45")
theme_override_colors/font_color = Color(1, 0, 0, 0.196078)
text = "Objective"
script = ExtResource("7_qqgus")

[node name="Crosshair" type="Label" parent="UserInterface/CenterContainer"]
layout_mode = 2
text = "+"

[node name="Large_Map" parent="." instance=ExtResource("9_rea1c")]

[node name="Killbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -12.3035, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Killbox"]
shape = SubResource("BoxShape3D_us7u6")

[connection signal="round_failed" from="Managers/RoundManager" to="UserInterface/CenterContainer/ObjectiveLabel" method="_on_round_manager_round_failed"]
[connection signal="round_started" from="Managers/RoundManager" to="UserInterface/CenterContainer/ObjectiveLabel" method="_on_round_manager_round_started"]
[connection signal="round_won" from="Managers/RoundManager" to="UserInterface/CenterContainer/ObjectiveLabel" method="_on_round_manager_round_won"]
[connection signal="timeout" from="Managers/RoundManager/RoundStartTimer" to="Managers/RoundManager" method="_on_round_start_timer_timeout"]
[connection signal="timeout" from="Managers/RoundManager/RoundTimer" to="Managers/RoundManager" method="_on_round_timer_timeout"]
[connection signal="body_entered" from="Killbox" to="Managers/RoundManager" method="_on_killbox_body_entered"]
